Name:                yesod-fb
Version:             0.4
Synopsis:            Useful glue functions between the fb library and Yesod.
Homepage:            https://github.com/meteficha/yesod-fb
License:             BSD3
License-file:        LICENSE
Author:              Felipe Lessa
Maintainer:          Felipe Lessa <felipe.lessa@gmail.com>
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.6
Extra-source-files:  README

Description:
  This package contains useful glue functions between the fb
  package (<http://hackage.haskell.org/package/fb>) and Yesod.
  These functions can't be included on the fb package itself
  because it should not depend on Yesod.

Source-repository head
  type:     git
  location: git://github.com/meteficha/yesod-fb.git

Library
  hs-source-dirs: src

  Build-depends: base                          >= 4          && < 5
               , yesod-core                    >= 1.2        && < 1.3
               , bytestring                    >= 0.9        && < 0.11
               , text                          >= 0.11       && < 2.0
               , http-conduit                  >= 2.0        && < 2.1
               , aeson                         >= 0.6        && < 0.8
               , conduit                       >= 1.0        && < 2.0
               , fb                            == 0.15
               , wai
               , crypto-api

  Exposed-modules: Yesod.Facebook
  GHC-options: -Wall
